--- a/game.css
+++ b/game.css
@@ -13096,5 +13096,16 @@ ul {list-style-type: none;float: right; margin-right: 20px;}
 .scroll {
 	width: 100vh;
 	overflow-x: scroll;
-	height: 512;
+	height: 512px;
+}
+
+.username{
+	background-color: white;
+}
+
+.greenGrass {
+	top: 70vh;
+	width: 100%;
+	height: 10px;
+	position: absolute;
 }
